--- a/findaword/PrivacyPolicy.html
+++ b/findaword/PrivacyPolicy.html
@@ -58,15 +58,15 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
         </div>
         <div style="margin-left: 0px; position: relative; width: 700px; z-index: 5; " id="body_layer">
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
-          <div id="id2" style="height: 2469px; left: 10px; position: absolute; top: 196px; width: 673px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
-            <div class="text-content style_External_673_2469" style="padding: 0px; ">
+          <div id="id2" style="height: 2451px; left: 10px; position: absolute; top: 196px; width: 673px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
+            <div class="text-content style_External_673_2451" style="padding: 0px; ">
               <div class="style_1">
                 <p style="padding-top: 0pt; " class="paragraph_style_1">Privacy Policy...<br /></p>
                 <p class="paragraph_style_2">NOTE: This is a draft and has not been finalized.<span style="line-height: 36px; " class="style_2"><br /></span></p>
                 <p class="paragraph_style_3">Effective date: August 02, 2019<br /></p>
                 <p class="paragraph_style_3"><span class="style_3">frmwrks, LLC</span> (&quot;us&quot;, &quot;we&quot;, or &quot;our&quot;) operates the <span class="style_3">FindAWord</span> iOS mobile application (hereinafter referred to as &quot;FindAWord&quot;).<br /></p>
                 <p class="paragraph_style_3">This page informs you of our privacy policy regarding the collection, use, and disclosure of any personal data when you use our FindAWord iOS application and the choices you have associated with the collection of that personal data.<br /></p>
-                <p class="paragraph_style_3">We use your data to provide and improve the FindAWord application. By using FindAWord, you agree to the collection and use of information in accordance with this policy. <span class="style_4">Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</span><br /></p>
+                <p class="paragraph_style_3">We use your data to provide and improve the FindAWord application. By using FindAWord, you agree to the collection and use of information in accordance with this policy.<br /></p>
                 <p class="paragraph_style_4">Definitions<br /></p>
                 <ol>
                   <li style="line-height: 14px; padding-left: 36px; text-indent: -25px; " class="full-width">
@@ -122,7 +122,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
                   </li>
                 </ol>
                 <p class="paragraph_style_6">Other usage statistics may be collected but none of that information will contain any personally identifiable data.<br /></p>
-                <p class="paragraph_style_6">This anonymous usage information is recorded via Google services such as <a title="https://firebase.google.com/" href="https://firebase.google.com/" class="style_5">Firebase</a> and <a title="https://get.fabric.io/" href="https://get.fabric.io/" class="style_5">Fabric</a>,<br /></p>
+                <p class="paragraph_style_6">This anonymous usage information is recorded via Google services such as <a title="https://firebase.google.com/" href="https://firebase.google.com/" class="style_4">Firebase</a> and <a title="https://get.fabric.io/" href="https://get.fabric.io/" class="style_4">Fabric</a>,<br /></p>
                 <p class="paragraph_style_8">User Feedback<br /></p>
                 <p class="paragraph_style_6">The <span class="style_3">Send Feedback</span> option will allow you to send in to frmwrks any suggestions you may have about the FindAWord application. No personal information will be recorded when such feedback is sent. If you include any personal information (such as your name, an email address or a telephone number) in the feedback, that will not be captured or recorded by frmwrks other than being present in the text which you send. frmwrks will not share that information and will only use that information to respond to a specific request you make for additional communications.<br /></p>
                 <p class="paragraph_style_4">Use of Data<br /></p>
@@ -163,7 +163,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
                     <p style="text-indent: -25px; " class="paragraph_style_9"><span style="font-size: 12px; " class="Bullet">•</span><span style="width: 21px; " class="inline-block"></span>To protect against legal liability.<br /></p>
                   </li>
                 </ol>
-                <p class="paragraph_style_6">As an European citizen, under GDPR, you have certain individual rights. You can learn more about these guides in the <a title="https://termsfeed.com/blog/gdpr/#Individual_Rights_Under_the_GDPR" href="https://termsfeed.com/blog/gdpr/#Individual_Rights_Under_the_GDPR" class="style_5">GDPR Guide</a>.<br /></p>
+                <p class="paragraph_style_6">As an European citizen, under GDPR, you have certain individual rights. You can learn more about these guides in the <a title="https://termsfeed.com/blog/gdpr/#Individual_Rights_Under_the_GDPR" href="https://termsfeed.com/blog/gdpr/#Individual_Rights_Under_the_GDPR" class="style_4">GDPR Guide</a>.<br /></p>
                 <p class="paragraph_style_4">Security of Data<br /></p>
                 <p class="paragraph_style_6">The security of any voluntarily provided personal information via feedback is important to us but remember that no method of transmission over the Internet or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.<br /></p>
                 <p class="paragraph_style_4">FindAWord Providers<br /></p>
@@ -183,7 +183,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
                 <p class="paragraph_style_6">If you have any questions about this Privacy Policy, please contact us:<br /></p>
                 <ol>
                   <li style="line-height: 14px; padding-left: 36px; text-indent: -25px; " class="full-width">
-                    <p style="text-indent: -25px; " class="paragraph_style_10"><span style="color: rgb(0, 0, 0); font-size: 12px; opacity: 1.00; text-decoration: none; " class="Bullet">•</span><span style="width: 21px; " class="inline-block"></span><span class="style_6">By visiting this page on our website: </span><a title="https://findaword.frmwrks.com/privacypolicy" href="https://findaword.frmwrks.com/privacypolicy">https://findaword.frmwrks.com/privacypolicy</a><span class="style_6"><br /></span></p>
+                    <p style="text-indent: -25px; " class="paragraph_style_10"><span style="color: rgb(0, 0, 0); font-size: 12px; opacity: 1.00; text-decoration: none; " class="Bullet">•</span><span style="width: 21px; " class="inline-block"></span><span class="style_5">By visiting this page on our website: </span><a title="https://findaword.frmwrks.com/privacypolicy" href="https://findaword.frmwrks.com/privacypolicy">https://findaword.frmwrks.com/privacypolicy</a><span class="style_5"><br /></span></p>
                   </li>
                 </ol>
               </div>
@@ -200,7 +200,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
 
           <div id="id3" style="height: 128px; left: 10px; position: absolute; top: 37px; width: 163px; z-index: 1; " class="style_SkipStroke_3 shape-with-text">
             <div class="text-content style_External_163_128" style="padding: 0px; ">
-              <div class="style_7">
+              <div class="style_6">
                 <div class="paragraph paragraph_style_11" style="padding-top: 0pt; "><div class="tinyText inline-block" style="height: 30px; position: relative; width: 150px; "><img usemap="#map1" id="shapeimage_1" src="PrivacyPolicy_files/shapeimage_1.png" style="border: none; height: 38px; left: -4px; position: absolute; top: -3px; width: 158px; z-index: 1; " alt="Welcome" title="" /><map name="map1" id="map1"><area href="Welcome.html" title="Welcome.html" alt="Welcome.html" coords="4, 3, 154, 33" /></map></div><br /></div>
                 <div class="paragraph paragraph_style_11"><div class="tinyText inline-block" style="height: 30px; position: relative; width: 150px; "><img usemap="#map2" id="shapeimage_2" src="PrivacyPolicy_files/shapeimage_2.png" style="border: none; height: 38px; left: -4px; position: absolute; top: -3px; width: 158px; z-index: 1; " alt="Guidelines" title="" /><map name="map2" id="map2"><area href="Guidelines.html" title="Guidelines.html" alt="Guidelines.html" coords="4, 3, 154, 33" /></map></div><br /></div>
                 <div class="paragraph paragraph_style_11"><div style="height: 30px; width: 150px;  height: 30px; position: relative; width: 150px; " class="tinyText style_SkipStrokeSkipFillSkipOpacity inline-block"><div style="position: relative; width: 150px; "><img src="PrivacyPolicy_files/shapeimage_3.png" alt="✔︎ privacy policy" style="height: 24px; left: 0px; margin-left: 1px; margin-top: 3px; position: absolute; top: 0px; width: 148px; " /></div></div><br /></div>
@@ -221,13 +221,13 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div style="height: 189px; width: 500px;  height: 189px; left: 185px; position: absolute; top: 7px; width: 500px; z-index: 1; " class="tinyText style_SkipStroke_4">
             <img src="PrivacyPolicy_files/About_ImageBorder.png" alt="" style="border: none; height: 189px; width: 500px; " />
           </div>
-          <div style="height: 2665px; line-height: 2665px; " class="spacer"> </div>
+          <div style="height: 2647px; line-height: 2647px; " class="spacer"> </div>
         </div>
         <div style="height: 75px; margin-left: 0px; position: relative; width: 700px; z-index: 15; " id="footer_layer">
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
           <div id="id4" style="height: 70px; left: 0px; position: absolute; top: 3px; width: 700px; z-index: 1; " class="style_SkipStroke_5 shape-with-text">
             <div class="text-content style_External_700_70" style="padding: 0px; ">
-              <div class="style_8"></div>
+              <div class="style_7"></div>
             </div>
           </div>
         </div>
