--- a/findaword/Welcome.html
+++ b/findaword/Welcome.html
@@ -51,18 +51,20 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div id="id1" style="height: 62px; left: 10px; position: absolute; top: 8px; width: 39%; z-index: 1; " class="style_SkipStroke shape-with-text">
             <div class="text-content style_External_275_62" style="padding: 0px; ">
               <div class="style">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style">frmwrks</p>
+                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="header_style">frmwrks</p>
               </div>
             </div>
           </div>
           
 
 
-          <div id="id2" style="height: 57px; left: 285px; position: absolute; top: 10px; width: 56%; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
+          <div id="id2" style="height: 57px; left: 235px; position: absolute; top: 10px; width: 56%; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
             <div class="text-content style_External_395_57" style="padding: 0px; ">
               <div class="style_1">
                 <p style="padding-top: 0pt; " class="paragraph_style_1">“There is a time in the life of every problem when it is big enough to see, yet small enough to solve..” <br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_2"><span style="line-height: 13px; " class="style_2">Mike Leavitt</span></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_2">
+                	<span style="line-height: 13px; " class="style_2">Mike Leavitt</span>
+                </p>
               </div>
             </div>
           </div>
