--- a/findaword/Welcome.html
+++ b/findaword/Welcome.html
@@ -63,7 +63,7 @@
           <div id="id3" style="height: 811px; left: 10px; position: absolute; top: 196px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
             <div class="text-content style_External_673_811" style="padding: 0px; ">
               <div class="style_3">
-                <p style="padding-top: 0pt; " class="paragraph_style_3">What is FindAWord...D<br /></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_3">What is FindAWord...E<br /></p>
                 <p class="Accomplishments"><span style="line-height: 16px; " class="style_4" lang="--multilingual" xml:lang="--multilingual">Okay, it’s a cheater app – but we’ll call it a solution assistant. Sometimes, when you are playing a game where you are given a bunch of letters and have to figure out one or two words, things get tough and frustrating. How about an example:<br /></span></p>
                 <ol>
                   <li style="line-height: 12px; padding-left: 10px; text-indent: -10px; " class="full-width">
