Adjust FindAWord font.

--- a/findaword/Welcome.html
+++ b/findaword/Welcome.html
@@ -105,7 +105,7 @@
           <div id="id3" style="height: 1211px; left: 10px; position: absolute; top: 140px; z-index: 1; " class="style_SkipStroke shape-with-text">
             <div class="text-content style_External_673_811" style="padding: 0px; ">
               <div class="style_3">
-                <p class="paragraph_style_3">What is FindAWord...</p>
+                <p class="paragraph_style_3">What is <span class="style_findaword">FindAWord</span>...</p>
                 <p class="style_4">Okay, it’s a cheater app – but we’ll call it a solution assistant. Sometimes, when you are playing a game
                 	 where you are given a bunch of letters and have to figure out one or two words, things get tough and frustrating. How
                 	 about an example:</p>
@@ -114,14 +114,14 @@
 								<p class="style_indentation style_indentation_last">Find: <span class="style_bold_times">One word 8 letters long</span></p>
 
 								<ul class="style_bullet">
-									<li>Figure it out? Could be tough. The FindAWord app has a dictionary with over 140,000 possible words
+									<li>Figure it out? Could be tough. The <span class="style_findaword">FindAWord</span> app has a dictionary with over 140,000 possible words
 										  and, given those letters above, there are 69 possible one-word answers.</li>
-									<li>Fortunately, FindAWord ranks the possible answers by frequency, which should make figuring the proper
+									<li>Fortunately, <span class="style_findaword">FindAWord</span> ranks the possible answers by frequency, which should make figuring the proper
 										  solution easier.</li>
-									<li>In this case, there are 2 <span class="blue">Frequent</span> one-word possibilities found by FindAWord.
+									<li>In this case, there are 2 <span class="blue">Frequent</span> one-word possibilities found by <span class="style_findaword">FindAWord</span>.
 										  (There are a few more in the <span class="blue">Common</span> (7), <span class="blue">Occasional</span>
 										  (9), <span class="blue">Infrequent</span> (12) and <span class="blue">Rare</span> (39) frequency categories.)</li>
-									<li>Also, fortunately, FindAWord, by default, does not show you full word. In this case, it would show you
+									<li>Also, fortunately, <span class="style_findaword">FindAWord</span>, by default, does not show you full word. In this case, it would show you
 										  (for <span class="blue">Frequent</span>):</li>
 								</ul>
 								<p class="style_bold_courier">R…N, S…N</p>
@@ -135,10 +135,10 @@
 								<p class="style_bold_courier">ROTATION, SOLUTION</p>
 								<ul class="style_bullet">
 									<li>At this point, picking the right, uh, SOLUTION, is easy!</li>
-									<li>There are several other helpful options available in FindAWord so be sure to take a look at the Guidelines web page.</li>
+									<li>There are several other helpful options available in <span class="style_findaword">FindAWord</span> so be sure to take a look at the Guidelines web page.</li>
 								</ul>
 
-                <p style="padding-top: 6px; " class="paragraph_style_13">FindAWord is helpful for what apps?<br /></p>
+                <p style="padding-top: 6px; " class="paragraph_style_13"><span class="style_findaword">FindAWord</span> is helpful for what apps?<br /></p>
                 <p class="paragraph_style_7">
                 	<span style="line-height: 16px; " class="style_4">There are many fun games and other apps out there where finding one or more words is a lot of fun:<br /></span>
                 </p>
@@ -194,7 +194,7 @@
                   </li>
                 </ol>
                 <p style="padding-bottom: 0pt; " class="paragraph_style_17">
-                	<span style="line-height: 16px; " class="style_4">This wonderful FindAWord app is even helpful while on a Delta Airlines flight where they have a timed Letter Mix game where they give you a bunch of letters and then a blank list of many words of various lengths for you to fill out.</span>
+                	<span style="line-height: 16px; " class="style_4">This wonderful <span class="style_findaword">FindAWord</span> app is even helpful while on a Delta Airlines flight where they have a timed Letter Mix game where they give you a bunch of letters and then a blank list of many words of various lengths for you to fill out.</span>
                 </p>
               </div>
             </div>
