Updated Privacy Policy.

--- a/findaword/Guidelines.html
+++ b/findaword/Guidelines.html
@@ -95,7 +95,7 @@
 
 					</div>
           
-					<!-- ••• HEIGHT?••• -->
+					<!-- ••• HEIGHT DOES NOTHING ••• -->
           <div style="height: 4139px; left: 10px; position: absolute; top: 140px;" class="style_SkipStroke shape-with-text">
             <div class="text-content style_B">
               <div class="style_pad_0">
