Adjust Welcome window width.

--- a/findaword/Welcome.html
+++ b/findaword/Welcome.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-    <meta name="viewport"  content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=700" />
     <title>Welcome</title>
     <link rel="stylesheet" type="text/css" media="screen,print" href="Welcome_files/Welcome.css" />
     <!--[if lt IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='Welcome_files/WelcomeIE.css'/><![endif]-->
@@ -41,8 +41,8 @@
         </div>
         
 				<!-- frmwrks HEADER -->
-        <div style="height: 75px; margin-left: 0px; position: relative; z-index: 10; " id="header_layer">
-          <div id="id1" style="height: 62px; left: 10px; position: absolute; top: 8px; width: 130px; z-index: 1; padding: 4px;">
+        <div style="height: 75px; margin-left: 0px; position: relative; " id="header_layer">
+          <div id="id1" style="height: 62px; left: 10px; position: absolute; top: 8px; width: 130px; padding: 4px;">
 						<p class="header_style">frmwrks</p>
           </div>
           <div id="id2" style="height: 57px; position: absolute; right: 0; top: 4px; left: 160px; min-width: 160px; z-index: 1; ">
