Finish up One Word Single

--- a/findaword/One_Word_Range.html
+++ b/findaword/One_Word_Range.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     <meta name="viewport" content="width=700" />
-    <title>PrivacyPolicy</title>
+    <title>One Word Range</title>
     <link rel="stylesheet" type="text/css" media="screen,print" href="One_Word_Range_files/One_Word_Range.css" />
     <!--[if lt IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='One_Word_Range_files/One_Word_RangeIE.css'/><![endif]-->
     <!--[if gte IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='Media/IE8.css'/><![endif]-->
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="Scripts/iWebSite.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/SharedResources/WidgetCommon.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/Navbar/navbar.js"></script>
+    <script type="text/javascript" src="Scripts/iWebImage.js"></script>
     <script type="text/javascript" src="One_Word_Range_files/One_Word_Range.js"></script>
   </head>
 
@@ -84,7 +85,7 @@
 						<div class="button_style">
 							<img class="img_style" usemap="#map2" id="shapeimage_3" src="common/image_privacy.png" alt="privacy policy" title="" />
 							<map name="map2" id="map2">
-								<area href="PrivacyPolicy.html" title="PrivacyPolicy.html" alt="PrivacyPolicy.html" coords="4, 3, 154, 33" />
+								<area href="One_Word_Range.html" title="One_Word_Range.html" alt="One_Word_Range.html" coords="4, 3, 154, 33" />
 							</map>
 						</div>
 						
