--- a/findaword/One_Word_Single.html
+++ b/findaword/One_Word_Single.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="Scripts/iWebSite.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/SharedResources/WidgetCommon.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/Navbar/navbar.js"></script>
+    <script type="text/javascript" src="Scripts/iWebImage.js"></script>
     <script type="text/javascript" src="One_Word_Single_files/One_Word_Single.js"></script>
   </head>
 
@@ -105,13 +106,8 @@
 								<!-- Weird: have to adjust bottom margin to reduce spacing but don't know why. -->
                 <p class="title_style" style="margin-bottom: 8px;">Find a Word with a Known Length...</p>
 
-                <p class="style_standard_paragraph">••• To be completed. •••</p>
-
-                <!-- NAME THIS Section -->
-                <p class="title_style">• One Word with Known Length Example...</p>
-                
                 <p class="style_standard_paragraph">
-                	Very common for SOMETHING OR OTHER.
+                	Here is a One Clue Crossword example of a single word with a known length and a set of candidate letters with a few extra thrown in to make the challenge more exciting:
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -120,7 +116,16 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	We've been given 11 letters to spell a word 7 letters long and let’s just pretend that we've been stumped in coming up with the final correct word. Let’s bring up FindAWord and get ready to go…
+                </p>
+                <!-- One Word Length Example -->
+                <div class="style_center_images">
+                	<div class="inline-block stroke_0" style="position: relative;">
+                		<img src="One_Word_Single_files/OWFL_02_GetGoing.png" alt=""/>
+                	</div>
+                </div>
+                <p class="style_standard_paragraph">
+                	Before we enter the candidate letters and word length, let’s check the options to make sure we're not going to ‘cheat’ too much.
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -129,7 +134,10 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	First, make sure we’re only looking for words of a specific single length. Then, since it’s likely only well-known words are likely to be candidates, let’s choose to show only ‘Frequent’ and ‘Common’ candidate categories. And finally, we’ll have only the first letter shown for each candidate word.
+                </p>
+                <p class="style_standard_paragraph">
+                	Now let’s get back to the word finder window and enter the candidate letters ‘NMIDHLBGRAI’ and the length of ‘7’ and see what comes up.
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -138,7 +146,7 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	Hmmm! 30 candidates found but only seeing the first letter just doesn’t quite give enough ‘light’. Let’s see some more letters. That’s done by tapping the ‘+’.
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -147,7 +155,7 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	Notice that in the last screen only one ‘B…’ was shown under ‘Common’ but now there are 3 candidates that start with ‘B'! More clues! Let’t tap ‘+’ again...
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -156,7 +164,7 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	And again...
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -165,7 +173,7 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	And again...
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -174,7 +182,7 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	Yes, and again...
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -183,7 +191,7 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	We’ve probably figured out the correct word but, just for fun, let’s hit the ‘+’ again...
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -192,7 +200,7 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	And again...
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -201,16 +209,19 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	All the candidates in full! Exciting! Hmmm... Which one is it? Maybe ‘RAILING’? Give it a shot!
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
                 	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Single_files/OWFL_11_Solved.png" alt=""/>
+                		<img src="One_Word_Single_files/OWFL_11_Solved.gif" alt="" width=285px height=259px/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	Solved!
+                </p>
+                <p class="style_standard_paragraph">
+                	And just for fun, here is the full solution to this One Clue Crossword:
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
@@ -219,7 +230,7 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	MORE WORDS HERE!
+                	We hope this will be a good help when you hit a very difficult puzzle clue!
                 </p>
                 
 
