--- a/findaword/Options.html
+++ b/findaword/Options.html
@@ -7,15 +7,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     <meta name="viewport" content="width=700" />
-    <title>PrivacyPolicy</title>
+    <title>Options</title>
     <link rel="stylesheet" type="text/css" media="screen,print" href="Options_files/Options.css" />
-    <!--[if lt IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='PrivacyPolicy_files/PrivacyPolicyIE.css'/><![endif]-->
+    <!--[if lt IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='Options_files/OptionsIE.css'/><![endif]-->
     <!--[if gte IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='Media/IE8.css'/><![endif]-->
     <link rel="stylesheet" href="common/common.css" />
     <script type="text/javascript" src="Scripts/iWebSite.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/SharedResources/WidgetCommon.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/Navbar/navbar.js"></script>
-    <script type="text/javascript" src="PrivacyPolicy_files/PrivacyPolicy.js"></script>
+    <script type="text/javascript" src="Scripts/iWebImage.js"></script>
+    <script type="text/javascript" src="Options_files/Options.js"></script>
   </head>
 
   <body class="body_class" onload="onPageLoad();" onunload="onPageUnload();">
@@ -84,7 +85,7 @@
 						<div class="button_style">
 							<img class="img_style" usemap="#map2" id="shapeimage_3" src="common/image_privacy.png" alt="privacy policy" title="" />
 							<map name="map2" id="map2">
-								<area href="PrivacyPolicy.html" title="PrivacyPolicy.html" alt="PrivacyPolicy.html" coords="4, 3, 154, 33" />
+								<area href="Options.html" title="Options.html" alt="Options.html" coords="4, 3, 154, 33" />
 							</map>
 						</div>
 						
