Polishing and add options and contact us.

--- a/findaword/ContactUs.html
+++ b/findaword/ContactUs.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="Scripts/iWebSite.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/SharedResources/WidgetCommon.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/Navbar/navbar.js"></script>
+    <script type="text/javascript" src="common/common.js"></script>
     <script type="text/javascript" src="PrivacyPolicy_files/PrivacyPolicy.js"></script>
   </head>
 
@@ -93,7 +94,7 @@
 						</div>
 
 					</div>
-image_contact_checked
+
 					<!-- CONTACT US DETAILS -->
           <div style="height: 4139px; left: 10px; position: absolute; top: 140px;" class="style_SkipStroke shape-with-text">
             <div class="text-content style_B">
@@ -101,8 +102,23 @@ image_contact_checked
 								<!-- Weird: have to adjust bottom margin to reduce spacing but don't know why. -->
                 <p class="title_style" style="margin-bottom: 8px;">Contact Us...</p>
 
-                <p class="style_standard_paragraph">To be completed.</p>
+                <p class="style_standard_paragraph">
+                	If you have any suggestions, issues, observations or concerns please contact us by sending us
+                	an email to <a href = "mailto: support@frmwrks.com">support@frmwrks.com</a>.
+                </p>
+                <p class="style_standard_paragraph">
+                	Your email address and personal information will be kept confidential and not shared in
+                	any manner with any other company but will be used only for communications between us.
+                	That is our earnest promise!
+                </p>
+                <p class="style_standard_paragraph">
+                	Once we receive an email from you, we will try to respond as quickly as possible. Your
+                	contributions of ideas and observations will be greatly appreciated.
+                </p>
                 
+                <p class="style_wrap_up">
+                	WE WOULD LOVE TO HEAR FROM YOU!
+                </p>
 
               </div>
             </div>
