--- a/findaword/One_Word_Range.html
+++ b/findaword/One_Word_Range.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="Scripts/Widgets/SharedResources/WidgetCommon.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/Navbar/navbar.js"></script>
     <script type="text/javascript" src="Scripts/iWebImage.js"></script>
+    <script type="text/javascript" src="common/common.js"></script>
     <script type="text/javascript" src="One_Word_Range_files/One_Word_Range.js"></script>
   </head>
 
@@ -84,7 +85,7 @@
 						<div class="button_style">
 							<img class="button_main" usemap="#map2" src="common/image_privacy.png" alt="Privacy Policy"/>
 							<map name="map2" id="map2">
-								<area href="Options.html" title="Options.html" alt="Options.html" coords="4, 3, 154, 33" />
+								<area href="PrivacyPolicy.html" title="PrivacyPolicy.html" alt="PrivacyPolicy.html" coords="4, 3, 154, 33" />
 							</map>
 						</div>
 						
@@ -110,7 +111,7 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div style="position: relative;">
+                	<div class="inline-block" style="position: relative;">
                 		<img src="One_Word_Range_files/FSWR_00_Words.png" alt=""/>
                 	</div>
                 </div>
@@ -119,7 +120,7 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div style="position: relative;">
+                	<div class="inline-block" style="position: relative;">
                 		<img src="One_Word_Range_files/FSWR_01_BlankPuzzle.png" alt=""/>
                 	</div>
                 </div>
@@ -200,7 +201,7 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="style="position: relative;">
+                	<div class="inline-block" style="position: relative;">
                 		<img src="One_Word_Range_files/FSWR_07_FullPuzzle.png" alt=""/>
                 	</div>
                 </div>
@@ -228,8 +229,8 @@
                 <p class="style_standard_paragraph">
                 	Now, to be frank, not all of these 54 words will be acceptable by Wordscapes. Many of the ‘Infrequent’ and ‘Rare’ words will not be acceptable and, occasionally, a few of the other more common words might not be acceptable. But it doesn’t hurt to enter as many words and earn those extra points.
                 </p>
-                <p class="style_standard_paragraph">
-                	Have fun!
+                <p class="style_wrap_up">
+                	OH, THIS WILL BE FUN!
                 </p>
                 
 
