--- a/findaword/One_Word_Single.html
+++ b/findaword/One_Word_Single.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="Scripts/Widgets/SharedResources/WidgetCommon.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/Navbar/navbar.js"></script>
     <script type="text/javascript" src="Scripts/iWebImage.js"></script>
+    <script type="text/javascript" src="common/common.js"></script>
     <script type="text/javascript" src="One_Word_Single_files/One_Word_Single.js"></script>
   </head>
 
@@ -85,7 +86,7 @@
 						<div class="button_style">
 							<img class="button_main" usemap="#map2" src="common/image_privacy.png" alt="Privacy Policy"/>
 							<map name="map2" id="map2">
-								<area href="Options.html" title="Options.html" alt="Options.html" coords="4, 3, 154, 33" />
+								<area href="PrivacyPolicy.html" title="PrivacyPolicy.html" alt="PrivacyPolicy.html" coords="4, 3, 154, 33" />
 							</map>
 						</div>
 						
@@ -214,7 +215,7 @@
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
                 	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Single_files/OWFL_11_Solved.gif" alt="" width=285px height=259px/>
+                		<img class="animated-gif" src="One_Word_Single_files/OWFL_11_Solved.gif" />
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -231,6 +232,9 @@
                 </div>
                 <p class="style_standard_paragraph">
                 	We hope this will be a good help when you hit a very difficult puzzle clue!
+                </p>
+                <p class="style_wrap_up">
+                	HAVE FUN SOLVING THE TOUGHIES!
                 </p>
                 
 
