Polishing and add options and contact us.

--- a/findaword/Guidelines.html
+++ b/findaword/Guidelines.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="Scripts/Widgets/SharedResources/WidgetCommon.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/Navbar/navbar.js"></script>
     <script type="text/javascript" src="Scripts/iWebImage.js"></script>
+    <script type="text/javascript" src="common/common.js"></script>
     <script type="text/javascript" src="Guidelines_files/Guidelines.js"></script>
   </head>
   
@@ -140,7 +141,7 @@
                 </p>
                 <!-- One Clue Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_1" style="height: 402px; width: 272px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 402px; width: 272px; position: relative;">
                 		<img src="Guidelines_files/OneClueStart.jpg" alt=""/>
                 	</div>
                 </div>
@@ -152,7 +153,7 @@
                 </p>
                 <!-- FindAWord Hint -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 372px; width: 272px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 374px; width: 272px; position: relative;">
                 		<img src="Guidelines_files/FAW_OneClue.jpg" alt=""/>
                 	</div>
                 </div>
@@ -161,7 +162,7 @@
                 </p>
                 <!-- Bikini Hint -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 251px; width: 272px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 255px; width: 272px; position: relative;">
                 		<img src="Guidelines_files/OneClueBikini.jpg" alt=""/>
                 	</div>
                 </div>
@@ -194,7 +195,7 @@
                 </p>
                 <!-- Wordscapes Challenge -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 156px; width: 222px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 159px; width: 222px; position: relative;">
                 		<img src="Guidelines_files/WordscapeLetters.jpg" alt=""/>
                 	</div>
                 </div>
@@ -206,7 +207,7 @@
                 </p>
                 <!-- FindAWord Wordscapes Word Entry -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 146px; width: 272px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 149px; width: 272px; position: relative;">
                 		<img src="Guidelines_files/FAW_WordscapeLetters.jpg" alt=""/>
                 	</div>
                 </div>
