--- a/findaword/PrivacyPolicy.html
+++ b/findaword/PrivacyPolicy.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="Scripts/iWebSite.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/SharedResources/WidgetCommon.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/Navbar/navbar.js"></script>
+    <script type="text/javascript" src="common/common.js"></script>
     <script type="text/javascript" src="PrivacyPolicy_files/PrivacyPolicy.js"></script>
   </head>
 
