--- a/findaword/Welcome.html
+++ b/findaword/Welcome.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="Scripts/Widgets/SharedResources/WidgetCommon.js"></script>
     <script type="text/javascript" src="Scripts/Widgets/Navbar/navbar.js"></script>
     <script type="text/javascript" src="common/common.js"></script>
+    <script type="text/javascript" src="common/common.js"></script>
     <script type="text/javascript" src="Welcome_files/Welcome.js"></script>
   </head>
   
